# my-board

./: .gitignore  CHANGELOG.md  README.md  links.yaml  links.yaml.template  pyproject.toml  script.py  test_links.yaml
board_generator/: __init__.py  schema.py
dashboard/: dashboard.html
dashboard/assets/css/: custom.css
data/: links.yaml
my_board/: cli.py
template/: base.html  cards.html  dashboard.html  nav.html
